# mcfunc_compiler

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.py  win_installer_setup.iss
.github/workflows/: build_and_release.yml
dev/: build.md  spec.md  style_guide.md
include/: version.h
include/cli/: outputIsTerminal.h  parseArgs.h  style_text.h
include/compiler/: FileWriteSourceFile.h  SourceFiles.h  Token.h  UniqueID.h  compile_error.h  fileToStr.h  generateImportPath.h  sourceFiles.h  statement.h  token.h  visitedFiles.h
include/compiler/generation/: addTickAndLoadFuncsToSharedTag.h  generateDataPack.h  writeFileToDataPack.h
include/compiler/linking/: LinkResult.h  link.h
include/compiler/syntax_analysis/: analyzeSyntax.h  buildSymbolTable.h  filePathFromToken.h  statement.h  symbol.h
include/compiler/tokenization/: Token.h  tokenize.h
include/compiler/translation/: CompiledSourceFile.h  compileSourceFile.h  constants.h
src/: main.cpp
src/cli/: outputIsTerminal.cpp  parseArgs.cpp  style_text.cpp
src/compiler/: FileWriteSourceFile.cpp  SourceFiles.cpp  Token.cpp  UniqueID.cpp  compile_error.cpp  fileToStr.cpp  generateImportPath.cpp  sourceFiles.cpp  statement.cpp  tokenize.cpp  visitedFiles.cpp
src/compiler/Token/: Token.cpp  tokenize.cpp
src/compiler/generation/: addTickAndLoadFuncsToSharedTag.cpp  generateDataPack.cpp  writeFileToDataPack.cpp
src/compiler/linking/: LinkResult.cpp  link.cpp
src/compiler/syntax_analysis/: analyzeSyntax.cpp  filePathFromToken.cpp  statement.cpp  symbol.cpp
src/compiler/token/: token.cpp  tokenize.cpp
src/compiler/tokenization/: Token.cpp  tokenize.cpp
src/compiler/translation/: CompiledSourceFile.cpp  compileSourceFile.cpp  constants.cpp  generateDataPack.cpp
tests/: test_main.cpp
tests/compiler/: test_compile_error.cpp  test_token.cpp  test_token_test_file1.mcfunc  test_token_test_file2.mcfunc
tests/compiler/Token/: test_token_test_file1.mcfunc  test_tokenize.cpp
tests/compiler/syntax_analysis/: test_filePathFromToken.cpp
tests/compiler/token/: test_token.cpp  test_token_test_file5.mcfunc  test_token_test_file8.mcfunc
tests/compiler/tokenization/: test_token_test_file1.mcfunc  test_token_test_file6.mcfunc  test_tokenize.cpp
tests/compiler/tokenize/: test_tokenize.cpp
